--- a/amazon-playbook.yml
+++ b/amazon-playbook.yml
@@ -1,36 +1,32 @@
 ---
 - hosts: frontend
-  become: true
-  tasks:
-    - name: Disable SELinux
-      selinux:
-        state: disabled
+  become: yes
 
-    - name: Update DNF repositories
+  tasks:
+    - name: Ensure DNF cache is updated
       dnf:
-        name: "*"
-        state: latest
+        update_cache: yes
 
     - name: Install Nginx
       dnf:
         name: nginx
         state: present
 
-    - name: Start Nginx service
+    - name: Start and enable Nginx
       service:
         name: nginx
         state: started
-        enabled: true  # Start Nginx service on system boot
-        
-    - name: Configure Nginx proxy
+        enabled: yes
+
+    - name: Deploy Nginx reverse proxy config
       template:
         src: nginx.conf.j2
         dest: /etc/nginx/nginx.conf
+        mode: 0644
       notify:
         - restart nginx
 
   handlers:
     - name: restart nginx
-      systemd:
+      service:
         name: nginx
-        state: restarted
